# csv-dashboard

./: .gitignore  .python-version  CSV_Dashboard_Presentation.pptx  README.md  pyproject.toml
.github/workflows/: ci.yml
_existing_code/: pipeline.py  profiler.py
_planning/: IMPLEMENTATION_QUICKSTART.md  MIGRATION_MAPPING.md  PHASE_0_VALIDATION.md  PROJECT_CONTEXT.md  PROMPT_TEMPLATES.md  UX_AND_LOGGING.md  constitution.md  plan.md  spec.md  tasks.md
_validation/: PHASE_0_RESULTS.md  chart_engine.py  debug_dtypes.py  inspect_phase0.py  test_phase0.py  test_phase0_relocated.py  verify_short_imports.py
docker/: .dockerignore  Dockerfile
docs/: ARCHITECTURE.md  MANUAL_TEST.md  PRODUCTION_NOTES.md  TECHNICAL_DESIGN.md  TRADE_OFFS.md
src/csv_dashboard/: config.py  logging_setup.py
src/csv_dashboard/agents/: chart_planner.py  insight_writer.py
src/csv_dashboard/charts/: __init__.py  engine.py  renderer.py
src/csv_dashboard/ingestion/: __init__.py  loader.py
src/csv_dashboard/insights/: __init__.py  chart_spec.py  llm_client.py  prompts.py
src/csv_dashboard/orchestrator/: pipeline.py
src/csv_dashboard/profiling/: __init__.py  profiler.py
src/csv_dashboard/quality/: __init__.py  data_quality.py
src/csv_dashboard/transparency/: __init__.py  transparency.py
src/csv_dashboard/ui/: app.py
tests/: conftest.py  test_app.py  test_chart_planner.py  test_chart_spec.py  test_data_quality.py  test_engine.py  test_insight_writer.py  test_llm_client.py  test_loader.py  test_pipeline_e2e.py  test_renderer.py
