[project]
name = "csv-dashboard"
version = "0.1.0"
description = "Turn any CSV into an insights dashboard for non-technical users."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "plotly>=5.18",
    "scipy>=1.11",
    "streamlit>=1.30",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.scripts]
csv-dashboard = "csv_dashboard.ui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
